@@ -17,22 +17,15 @@
 
 package org.apache.doris.tso;
 
-import org.apache.doris.cloud.proto.Cloud.GetTsoRecoveryTransactionsResponse;
-import org.apache.doris.cloud.proto.Cloud.TxnInfoPB;
-import org.apache.doris.cloud.proto.Cloud.TxnStatusPB;
 import org.apache.doris.common.Pair;
-import org.apache.doris.common.UserException;
-import org.apache.doris.transaction.GlobalTransactionMgrIface;
-import org.apache.doris.transaction.TransactionState;
-import org.apache.doris.transaction.TransactionStatus;
 
-import com.google.protobuf.ByteString;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
@@ -43,23 +36,47 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
 
 public class TSOTransactionTrackerTest {
-    private final ReentrantLock lock = new ReentrantLock();
-    private final TSOTransactionTracker tracker = new TSOTransactionTracker(lock);
-    private final GlobalTransactionMgrIface txnMgr = Mockito.mock(GlobalTransactionMgrIface.class);
+    private ReentrantLock lock;
+    private TSOTransactionTracker tracker;
+    private ExecutorService executor;
 
-    private void reset(long delayMs) {
+    @BeforeEach
+    public void setUp() {
+        lock = new ReentrantLock();
+        tracker = new TSOTransactionTracker(lock);
+        executor = Executors.newSingleThreadExecutor();
         lock.lock();
         try {
-            tracker.reset(0, delayMs);
+            tracker.reset();
         } finally {
             lock.unlock();
         }
     }
 
-    private void register(long dbId, long txnId, long tso) {
+    @AfterEach
+    public void tearDown() {
+        executor.shutdownNow();
+    }
+
+    private void register(long dbId, long txnId, long tso, long... tableIds) {
+        Set<Long> tables = new java.util.HashSet<>();
+        for (long tableId : tableIds) {
+            tables.add(tableId);
+        }
         lock.lock();
         try {
-            tracker.register(Pair.of(dbId, txnId), tso, 0, Collections.singleton(100L));
+            tracker.register(Pair.of(dbId, txnId), tso, System.nanoTime(), tables);
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private TSOTransactionTracker.WaitResult await(long dbId, long tableId, long endTso, long timeoutMs)
+            throws InterruptedException {
+        lock.lock();
+        try {
+            return tracker.awaitTransactions(Map.of(dbId, List.of(tableId)), endTso,
+                    TimeUnit.MILLISECONDS.toNanos(timeoutMs));
         } finally {
             lock.unlock();
         }
@@ -74,217 +91,14 @@ public class TSOTransactionTrackerTest {
         }
     }
 
-    static GetTsoRecoveryTransactionsResponse recoveryBatch(ByteString nextKey, TxnInfoPB... transactions) {
-        return GetTsoRecoveryTransactionsResponse.newBuilder().setNextStartKey(nextKey)
-                .addAllTxnInfos(Arrays.asList(transactions)).build();
-    }
-
-    private static TxnInfoPB recoveryTxn(long dbId, long txnId, long tso, long... tables) {
-        TxnInfoPB.Builder info = TxnInfoPB.newBuilder().setDbId(dbId).setTxnId(txnId)
-                .setStatus(TxnStatusPB.TXN_STATUS_PREPARED);
-        for (long table : tables) {
-            info.addTableIds(table);
-        }
-        if (tso > 0) {
-            info.setCommitTso(tso).setStatus(TxnStatusPB.TXN_STATUS_COMMITTED);
-        }
-        return info.build();
-    }
-
-    private void finishRecovery() throws Exception {
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.doReturn(recoveryBatch(ByteString.EMPTY)).when(txnMgr)
-                .getTsoRecoveryTransactions(1000L, ByteString.EMPTY);
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-    }
-
-    private TSOTransactionTracker.WaitResult awaitTable(long dbId, long tableId, long endTso) throws Exception {
-        lock.lock();
-        try {
-            return tracker.awaitTransactions(Collections.singletonMap(dbId, Collections.singletonList(tableId)),
-                    endTso, 0);
-        } finally {
-            lock.unlock();
-        }
-    }
-
-    @Test
-    public void testReadWaitFiltersDatabaseTableAndExclusivePhysicalEnd() throws Exception {
-        reset(0);
-        finishRecovery();
-        register(1, 10, TSOTimestamp.composeTimestamp(100, 1));
-        long end = TSOTimestamp.composePhysicalTimestamp(101);
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(2, 100, end));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 200, end));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED,
-                awaitTable(1, 100, TSOTimestamp.composePhysicalTimestamp(100)));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 100, end));
-        // Retrying later must not hide the original in-window request or lose any involved table.
-        lock.lock();
-        try {
-            tracker.register(Pair.of(1L, 10L), TSOTimestamp.composeTimestamp(200, 1), 0, Set.of(100L, 200L));
-        } finally {
-            lock.unlock();
-        }
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 100, end));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 200, end));
-        tracker.transactionFinished(1, 10);
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 200, end));
-    }
-
-    @Test
-    public void testEmptyRegistrationSetCannotBypassRecovery() throws Exception {
-        reset(2000);
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.RECOVERING, awaitTable(1, 100, 200));
-    }
-
-    @Test
-    public void testLoadedRecoveryWaitsOnlyRelatedTablesAndKeepsPrefixFrozen() throws Exception {
-        reset(2000);
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(ByteString.EMPTY,
-                        recoveryTxn(1, 10, 100, 100), recoveryTxn(1, 20, 0, 200)));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(2));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 300, 200));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(2, 100, 200));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 100, 90));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 100, 200));
-        // No persisted TSO is not proof that an old in-flight commit lies outside this window.
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 200, 90));
-        Assertions.assertEquals(80, candidate(250, 80));
-        tracker.transactionFinished(1, 10);
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 100, 200));
-        Assertions.assertEquals(80, candidate(250, 80));
-        tracker.transactionFinished(1, 20);
-        Assertions.assertTrue(tracker.isRecoveryReady());
-        Assertions.assertEquals(250, candidate(250, 80));
-    }
-
-    @Test
-    public void testFailedBatchResumesWithoutOpeningAnIncompleteRecovery() throws Exception {
-        reset(0);
-        ByteString nextKey = ByteString.copyFromUtf8("next batch");
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(nextKey, recoveryTxn(1, 10, 100, 100)));
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, nextKey))
-                .thenThrow(new UserException("batch RPC failed"))
-                .thenReturn(recoveryBatch(ByteString.EMPTY, recoveryTxn(2, 20, 0, 200)));
-        Assertions.assertThrows(UserException.class,
-                () -> tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3)));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.RECOVERING, awaitTable(1, 300, 200));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 300, 200));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 100, 200));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(2, 200, 200));
-        Assertions.assertEquals(80, candidate(250, 80));
-        Mockito.verify(txnMgr).getTransactionIdWatermark();
-        Mockito.verify(txnMgr).getTsoRecoveryTransactions(1000L, ByteString.EMPTY);
-    }
-
-    @Test
-    public void testRecoveryBatchesMergeConcurrentRegistrationsAndFinishNotifications() throws Exception {
-        reset(0);
-        ByteString nextKey = ByteString.copyFromUtf8("next batch");
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY)).thenAnswer(invocation -> {
-            Assertions.assertFalse(lock.isHeldByCurrentThread());
-            register(1, 10, 200); // Same old transaction is retried through the new master.
-            return recoveryBatch(nextKey, recoveryTxn(1, 10, 0, 200));
-        });
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, nextKey)).thenAnswer(invocation -> {
-            Assertions.assertFalse(lock.isHeldByCurrentThread());
-            tracker.transactionFinished(1, 10);
-            register(2, 2000, 150); // New transactions must survive importing the old list.
-            return recoveryBatch(ByteString.EMPTY, recoveryTxn(1, 20, 0, 300));
-        });
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 100, 300));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, awaitTable(1, 200, 300));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(2, 100, 300));
-        Assertions.assertEquals(80, candidate(300, 80));
-        tracker.transactionFinished(1, 20);
-        Assertions.assertEquals(149, candidate(300, 80));
-    }
-
-    @Test
-    public void testRecoveredUnknownTsoRetainsTablesAcrossLocalRetry() throws Exception {
-        reset(0);
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(ByteString.EMPTY, recoveryTxn(1, 10, 0, 200)));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        register(1, 10, 300);
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 100, 200));
-        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(1, 200, 200));
-        Assertions.assertEquals(80, candidate(400, 80));
-        tracker.transactionFinished(1, 10);
-        Assertions.assertEquals(400, candidate(400, 80));
-    }
-
-    @Test
-    public void testRecoveredTransactionsAreReconciledInBoundedRotatingBatches() throws Exception {
-        reset(0);
-        TxnInfoPB[] transactions = new TxnInfoPB[150];
-        for (int i = 0; i < transactions.length; i++) {
-            transactions[i] = recoveryTxn(1, i + 1, 0, 100);
-        }
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(ByteString.EMPTY, transactions));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-        Mockito.verify(txnMgr, Mockito.atMost(64)).getTransactionState(Mockito.anyLong(), Mockito.anyLong());
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(5));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(6));
-        Mockito.verify(txnMgr).getTransactionState(1, 150);
-        Assertions.assertEquals(80, candidate(200, 80)); // Missing state must retain recovery entries.
-        TransactionState state = Mockito.mock(TransactionState.class);
-        Mockito.when(state.getTransactionStatus()).thenReturn(TransactionStatus.COMMITTED);
-        Mockito.when(txnMgr.getTransactionState(Mockito.anyLong(), Mockito.anyLong())).thenReturn(state);
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(7));
-        Assertions.assertEquals(80, candidate(200, 80));
-        Mockito.when(state.getTransactionStatus()).thenReturn(TransactionStatus.ABORTED);
-        for (int i = 0; i < 3; i++) {
-            tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(8 + i));
-        }
-        Assertions.assertTrue(tracker.isRecoveryReady());
-        Assertions.assertEquals(200, candidate(200, 80));
-    }
-
-    @Test
-    public void testRecoveredTransactionCompletionWakesOnlyItsWaiters() throws Exception {
-        reset(0);
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(ByteString.EMPTY,
-                        recoveryTxn(1, 10, 0, 100), recoveryTxn(2, 20, 0, 100)));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        CountDownLatch started = new CountDownLatch(1);
-        ExecutorService executor = Executors.newSingleThreadExecutor();
-        try {
-            Future<TSOTransactionTracker.WaitResult> waiting = submitReadWait(executor, started);
-            Assertions.assertTrue(started.await(30, TimeUnit.SECONDS));
-            TransactionState aborted = Mockito.mock(TransactionState.class);
-            Mockito.when(aborted.getTransactionStatus()).thenReturn(TransactionStatus.ABORTED);
-            Mockito.when(txnMgr.getTransactionState(1, 10)).thenReturn(aborted);
-            tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-            Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(30, TimeUnit.SECONDS));
-            Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, awaitTable(2, 100, 200));
-            Assertions.assertEquals(80, candidate(300, 80));
-        } finally {
-            executor.shutdownNow();
-        }
-    }
-
-    private Future<TSOTransactionTracker.WaitResult> submitReadWait(ExecutorService executor, CountDownLatch started) {
+    private Future<TSOTransactionTracker.WaitResult> awaitAsync(long dbId, long tableId, long endTso,
+            long timeoutMs, CountDownLatch started) {
         return executor.submit(() -> {
             lock.lock();
             try {
                 started.countDown();
-                return tracker.awaitTransactions(Map.of(1L, Collections.singletonList(100L)),
-                        200, TimeUnit.SECONDS.toNanos(30));
+                return tracker.awaitTransactions(Map.of(dbId, List.of(tableId)), endTso,
+                        TimeUnit.MILLISECONDS.toNanos(timeoutMs));
             } finally {
                 lock.unlock();
             }
@@ -292,177 +106,164 @@ public class TSOTransactionTrackerTest {
     }
 
     @Test
-    public void testReconciliationWakesReadWithoutAdvancingTheGlobalPrefix() throws Exception {
-        reset(0);
-        finishRecovery();
-        register(1, 10, 100);
-        register(2, 20, 90); // An unrelated database continues to hold the global prefix.
-        CountDownLatch started = new CountDownLatch(1);
-        ExecutorService executor = Executors.newSingleThreadExecutor();
+    public void testWaitFiltersDatabaseTableAndEndTso() throws Exception {
+        register(1, 10, 100, 1000);
+        register(1, 20, 120, 2000);
+        register(2, 30, 130, 1000);
+
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, await(1, 2000, 110, 0));
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, await(2, 1000, 120, 0));
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, await(1, 1000, 100, 0));
+        Assertions.assertEquals(99, candidate(150, 90));
+
+        tracker.markTxnFinished(1, 10);
+        Assertions.assertEquals(119, candidate(150, 90));
+        tracker.markTxnFinished(1, 20);
+        tracker.markTxnFinished(2, 30);
+        Assertions.assertEquals(150, candidate(150, 90));
+    }
+
+    @Test
+    public void testWaitUsesFixedRegistrationSnapshot() throws Exception {
+        register(1, 10, 100, 1000);
+        Future<TSOTransactionTracker.WaitResult> waiting = executor.submit(() -> await(1, 1000, 150, 5000));
+        Thread.sleep(100);
+        register(1, 20, 120, 1000);
+        tracker.markTxnFinished(1, 10);
+
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(5, TimeUnit.SECONDS));
+        Assertions.assertEquals(119, candidate(150, 90));
+    }
+
+    @Test
+    public void testResetInvalidatesWait() throws Exception {
+        register(1, 10, 100, 1000);
+        Future<TSOTransactionTracker.WaitResult> waiting = executor.submit(() -> await(1, 1000, 150, 5000));
+        Thread.sleep(100);
+        lock.lock();
         try {
-            Future<TSOTransactionTracker.WaitResult> waiting = submitReadWait(executor, started);
-            Assertions.assertTrue(started.await(30, TimeUnit.SECONDS));
-            TransactionState aborted = Mockito.mock(TransactionState.class);
-            Mockito.when(aborted.getTransactionStatus()).thenReturn(TransactionStatus.ABORTED);
-            Mockito.when(txnMgr.getTransactionState(1, 10)).thenReturn(aborted);
-            tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-            Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(30, TimeUnit.SECONDS));
-            Assertions.assertEquals(89, candidate(300, 80));
+            tracker.reset();
         } finally {
-            executor.shutdownNow();
+            lock.unlock();
         }
+
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.RESET, waiting.get(5, TimeUnit.SECONDS));
     }
 
     @Test
-    public void testWaitReleasesAllocatorLockAndDoesNotFollowLaterWrites() throws Exception {
-        reset(0);
-        finishRecovery();
-        register(1, 10, 100);
-        CountDownLatch started = new CountDownLatch(1);
-        ExecutorService executor = Executors.newSingleThreadExecutor();
+    public void testFencedReplacementAndAttemptScopedAbandon() {
+        register(1, 10, 100, 1000);
+        lock.lock();
         try {
-            Future<TSOTransactionTracker.WaitResult> waiting = submitReadWait(executor, started);
-            Assertions.assertTrue(started.await(30, TimeUnit.SECONDS));
-            // Acquiring the lock proves the waiter released it; allocation can continue while it waits.
-            register(1, 20, 300);
-            tracker.transactionFinished(1, 10);
-            Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(30, TimeUnit.SECONDS));
-            Assertions.assertEquals(1, tracker.getPendingCount());
+            tracker.replaceFenced(Pair.of(1L, 10L), 100, 110, 120,
+                    System.nanoTime(), Collections.singleton(2000L));
         } finally {
-            executor.shutdownNow();
+            lock.unlock();
         }
-    }
 
-    @Test
-    public void testResetInvalidatesAnInFlightReadWait() throws Exception {
-        reset(0);
-        finishRecovery();
-        register(1, 10, 100);
-        CountDownLatch started = new CountDownLatch(1);
-        ExecutorService executor = Executors.newSingleThreadExecutor();
-        try {
-            Future<TSOTransactionTracker.WaitResult> waiting = submitReadWait(executor, started);
-            Assertions.assertTrue(started.await(30, TimeUnit.SECONDS));
-            reset(2000);
-            Assertions.assertEquals(TSOTransactionTracker.WaitResult.RECOVERING, waiting.get(30, TimeUnit.SECONDS));
-        } finally {
-            executor.shutdownNow();
-        }
-    }
-
-    @Test
-    public void testOutOfOrderVisibilityAndRetryRetainEarliestTso() throws Exception {
-        reset(2000);
-        finishRecovery();
-        register(1, 10, 100);
-        register(1, 20, 120);
-        tracker.transactionFinished(1, 20);
-        Assertions.assertEquals(99, candidate(150, 80));
-        register(1, 10, 200); // A retry must not hide a delayed request carrying TSO 100.
-        Assertions.assertEquals(99, candidate(250, 99));
-        tracker.transactionFinished(1, 10);
-        tracker.transactionFinished(1, 10); // Duplicate terminal notification is harmless.
-        Assertions.assertEquals(250, candidate(250, 99));
-    }
-
-    @Test
-    public void testRecoveryCapturesFixedWatermarkAfterDelayAndPreservesNewPending() throws Exception {
-        reset(2000);
-        register(2, 2001, 200);
-        tracker.checkTransactions(txnMgr, TimeUnit.MILLISECONDS.toNanos(1999));
-        Mockito.verify(txnMgr, Mockito.never()).getTransactionIdWatermark();
-        Assertions.assertEquals(80, candidate(250, 80));
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L, 2000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenReturn(recoveryBatch(ByteString.EMPTY, recoveryTxn(1, 10, 0, 100)));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(2));
-        Assertions.assertEquals(80, candidate(250, 80));
-        TransactionState aborted = Mockito.mock(TransactionState.class);
-        Mockito.when(aborted.getTransactionStatus()).thenReturn(TransactionStatus.ABORTED);
-        Mockito.when(txnMgr.getTransactionState(1, 10)).thenReturn(aborted);
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        Assertions.assertEquals(199, candidate(250, 80));
-        Mockito.verify(txnMgr).getTransactionIdWatermark();
-        Mockito.verify(txnMgr).getTsoRecoveryTransactions(1000L, ByteString.EMPTY);
-    }
-
-    @Test
-    public void testOnlyRealTerminalStatesReleasePending() throws Exception {
-        reset(2000);
-        finishRecovery();
-        for (TransactionStatus status : TransactionStatus.values()) {
-            register(1, 10, 100);
-            TransactionState state = Mockito.mock(TransactionState.class);
-            Mockito.when(state.getTransactionStatus()).thenReturn(status);
-            Mockito.when(txnMgr.getTransactionState(1, 10)).thenReturn(state);
-            tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-            boolean terminal = status == TransactionStatus.VISIBLE || status == TransactionStatus.ABORTED;
-            Assertions.assertEquals(terminal ? 150 : 99, candidate(150, 80), status.toString());
-        }
-    }
-
-    @Test
-    public void testMissingTransactionAndFailedRecoveryNeverAdvance() throws Exception {
-        reset(0);
-        register(1, 10, 100);
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY))
-                .thenThrow(new UserException("old MS has no recovery RPC"));
-        Assertions.assertThrows(UserException.class,
-                () -> tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3)));
-        Assertions.assertEquals(80, candidate(150, 80));
+        Assertions.assertEquals(119, candidate(150, 90));
+        tracker.abandonCommitTso(1, 10, 100);
         Assertions.assertEquals(1, tracker.getPendingCount());
-        finishRecovery();
-        Assertions.assertEquals(99, candidate(150, 80));
+        tracker.abandonCommitTso(1, 10, 120);
+        Assertions.assertEquals(0, tracker.getPendingCount());
     }
 
     @Test
-    public void testRpcDoesNotHoldAllocatorLockAndOldResultCannotRemoveNewRegistration() throws Exception {
-        reset(2000);
-        finishRecovery();
-        register(1, 10, 100);
-        TransactionState visible = Mockito.mock(TransactionState.class);
-        Mockito.when(visible.getTransactionStatus()).thenReturn(TransactionStatus.VISIBLE);
-        Mockito.when(txnMgr.getTransactionState(1, 10)).thenAnswer(invocation -> {
-            Assertions.assertFalse(lock.isHeldByCurrentThread());
-            reset(2000); // Simulate reinitialization while an old reconciliation request is in flight.
-            register(1, 10, 200);
-            return visible;
-        });
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
+    public void testRepeatedRegistrationRetainsEarliestTso() throws Exception {
+        register(1, 10, 100, 1000);
+        register(1, 10, 120, 2000);
+
         Assertions.assertEquals(1, tracker.getPendingCount());
-        Assertions.assertEquals(200, tracker.getOldestPendingTso());
-        Assertions.assertFalse(tracker.isRecoveryReady());
+        Assertions.assertEquals(100, tracker.getOldestPendingTso());
+        Assertions.assertEquals(10, tracker.getOldestPendingTxnId());
+        Assertions.assertTrue(tracker.getOldestPendingAgeMs() >= 0);
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, await(1, 2000, 100, 0));
+        tracker.abandonCommitTso(1, 10, 120);
+        Assertions.assertEquals(1, tracker.getPendingCount());
+        tracker.markTxnFinished(1, 10);
+        Assertions.assertEquals(0, tracker.getPendingCount());
     }
 
     @Test
-    public void testOldRecoveryResultCannotOpenNewRecovery() throws Exception {
-        reset(0);
-        Mockito.when(txnMgr.getTransactionIdWatermark()).thenReturn(1000L);
-        Mockito.when(txnMgr.getTsoRecoveryTransactions(1000L, ByteString.EMPTY)).thenAnswer(invocation -> {
-            Assertions.assertFalse(lock.isHeldByCurrentThread());
-            reset(2000);
-            return recoveryBatch(ByteString.EMPTY);
-        });
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(3));
-        Assertions.assertFalse(tracker.isRecoveryReady());
-        Assertions.assertEquals(80, candidate(150, 80));
-    }
+    public void testFencedReplacementWakesOldAttemptWaiterAndMergesTables() throws Exception {
+        register(1, 10, 100, 1000);
+        CountDownLatch started = new CountDownLatch(1);
+        Future<TSOTransactionTracker.WaitResult> waiting = awaitAsync(1, 1000, 110, 5000, started);
+        Assertions.assertTrue(started.await(5, TimeUnit.SECONDS));
 
-    @Test
-    public void testReconciliationBatchIsBoundedAndRotatesPastOldest() throws Exception {
-        reset(0);
-        finishRecovery();
-        for (int i = 1; i <= 150; i++) {
-            register(1, i, 1000 + i);
+        lock.lock();
+        try {
+            tracker.replaceFenced(Pair.of(1L, 10L), 100, 110, 120,
+                    System.nanoTime(), Collections.singleton(2000L));
+        } finally {
+            lock.unlock();
         }
-        Mockito.clearInvocations(txnMgr);
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(4));
-        Mockito.verify(txnMgr, Mockito.atMost(64)).getTransactionState(Mockito.anyLong(), Mockito.anyLong());
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(5));
-        tracker.checkTransactions(txnMgr, TimeUnit.SECONDS.toNanos(6));
-        Mockito.verify(txnMgr, Mockito.times(3)).getTransactionState(1, 1);
-        Mockito.verify(txnMgr).getTransactionState(1, 150);
-        Assertions.assertEquals(150, tracker.getPendingCount());
+
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(5, TimeUnit.SECONDS));
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, await(1, 1000, 120, 0));
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.TIMED_OUT, await(1, 2000, 120, 0));
+        Assertions.assertEquals(120, tracker.getOldestPendingTso());
+    }
+
+    @Test
+    public void testAbandonWakesWaiterOnlyForMatchingAttempt() throws Exception {
+        register(1, 10, 100, 1000);
+        CountDownLatch started = new CountDownLatch(1);
+        Future<TSOTransactionTracker.WaitResult> waiting = awaitAsync(1, 1000, 100, 5000, started);
+        Assertions.assertTrue(started.await(5, TimeUnit.SECONDS));
+
+        tracker.abandonCommitTso(1, 10, 99);
+        Assertions.assertEquals(1, tracker.getPendingCount());
+        tracker.abandonCommitTso(1, 10, 100);
+
+        Assertions.assertEquals(TSOTransactionTracker.WaitResult.FINISHED, waiting.get(5, TimeUnit.SECONDS));
+        Assertions.assertEquals(0, tracker.getPendingCount());
+        Assertions.assertEquals(0, tracker.getOldestPendingTso());
+        Assertions.assertEquals(0, tracker.getOldestPendingTxnId());
+        Assertions.assertEquals(0, tracker.getOldestPendingAgeMs());
+    }
+
+    @Test
+    public void testFencedReplacementWithoutExistingRegistration() {
+        lock.lock();
+        try {
+            tracker.replaceFenced(Pair.of(1L, 10L), 100, 110, 120,
+                    System.nanoTime(), Set.of(1000L));
+        } finally {
+            lock.unlock();
+        }
+
+        Assertions.assertEquals(1, tracker.getPendingCount());
+        Assertions.assertEquals(120, tracker.getOldestPendingTso());
+        Assertions.assertEquals(10, tracker.getOldestPendingTxnId());
+        Assertions.assertEquals(119, candidate(150, 90));
+        Assertions.assertEquals(150, candidate(100, 150));
+    }
+
+    @Test
+    public void testRegistrationPreconditions() {
+        Assertions.assertThrows(IllegalStateException.class, tracker::reset);
+        Assertions.assertThrows(IllegalStateException.class,
+                () -> tracker.register(Pair.of(1L, 10L), 100, System.nanoTime(), Set.of(1000L)));
+        Assertions.assertThrows(IllegalStateException.class,
+                () -> tracker.replaceFenced(Pair.of(1L, 10L), 100, 110, 120,
+                        System.nanoTime(), Set.of(1000L)));
+        Assertions.assertThrows(IllegalStateException.class,
+                () -> tracker.awaitTransactions(Map.of(1L, List.of(1000L)), 100, 0));
+        Assertions.assertThrows(IllegalStateException.class, () -> tracker.candidateCommittedTso(100, 90));
+
+        lock.lock();
+        try {
+            Assertions.assertThrows(IllegalArgumentException.class,
+                    () -> tracker.register(Pair.of(1L, 10L), 100, System.nanoTime(), Collections.emptySet()));
+            Assertions.assertThrows(IllegalArgumentException.class,
+                    () -> tracker.replaceFenced(Pair.of(1L, 10L), 111, 110, 120,
+                            System.nanoTime(), Set.of(1000L)));
+            Assertions.assertThrows(IllegalArgumentException.class,
+                    () -> tracker.replaceFenced(Pair.of(1L, 10L), 100, 110, 110,
+                            System.nanoTime(), Set.of(1000L)));
+        } finally {
+            lock.unlock();
+        }
     }
 }
